// The MIT License (MIT)

// Copyright (c) 2023 GateHub Limited

// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:

// The above copyright notice and this permission notice shall be included in all
// copies or substantial portions of the Software.

// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
// SOFTWARE.

syntax = "proto3";

package proto;

option go_package="github.com/GateHubNet/data-api-go/internal/pb";

import "balance_changes.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message GetAccountBalanceChangesRequest {
  /*
   * XRP Ledger address to query
   */
  string address = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    min_length: 1,
    field_configuration: {
      path_param_name: "address",
    },
  }];

  /*
   * (Optional) Restrict results to specified currency.
   */
  optional string currency = 2;

  /*
   * (Optional) Restrict results to specified counterparty / issuer.
   */
  optional string counterparty = 3;

  /*
   * (Optional) Start time of query range.
   */
  optional string start = 4;

  /*
   * (Optional) End time of query range.
   */
  optional string end = 5;

  /*
   * (Optional) If true, return results in reverse chronological order.
   * The default is false
   */
  optional bool descending = 6;

  /*
   * (Optional) Maximum results per page. The default is 200.
   * Cannot be more than 1000.
   */
  optional uint32 limit = 7;

  /*
   * (Optional) Pagination key from previously returned response.
   */
  optional string marker = 8;

  reserved 9; // for example for format
}

message GetAccountBalanceChangesResponse {
  /*
   * The value success indicates that this is a successful response.
   */
  string result = 1;

  /*
   * Number of balance changes returned.
   */
  uint64 counter = 2;

  /*
   * (May be omitted) Pagination marker
   */
  optional string marker = 3;

  /*
   * The requested balance changes
   */
  repeated BalanceChanges balance_changes = 4;
}